<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tab1"
                style="@style/TabStyle"
                android:nextFocusDown="@id/tab1_btn1"
                android:focusableInTouchMode="true"
                android:text="@string/tab1"/>
            <TextView
                android:id="@+id/tab2"
                style="@style/TabStyle"
                android:nextFocusDown="@id/tab2_btn1"
                android:text="@string/tab2"/>
            <TextView
                android:id="@+id/tab3"
                style="@style/TabStyle"
                android:nextFocusDown="@id/tab3_btn1"
                android:text="@string/tab3"/>
        </LinearLayout>

        <fragment
            android:id="@+id/fragment_container"
            android:name="com.example.demo.fragment.ViewPagerFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </fragment>
    </LinearLayout>
</LinearLayout>